Simplify matrix generation
We previously had a few inputs that were expected to be comma-separated
lists (like 'a,b,c') and later steps would then convert them to a JSON
array ('["a", "b", "c"]') so that they could be used to generate the
matrix strategy.

With this commit, we require those inputs to be formatted as JSON arrays
from the start. This allows us to remove the conversion steps, thus
simplifying the matrix generation. It also makes the workflow as a whole
a bit more consistent, given that we already have other inputs that are
expected to be JSON arrays.

Signed-off-by: Leandro Motta Barros <leandro@balena.io>
Change-type: patch

--- a/.github/workflows/generic-amd64.yml
+++ b/.github/workflows/generic-amd64.yml
@@ -95,7 +95,10 @@ jobs:
       #   for device types we use virtualised testing for: test-workers
       machine: generic-amd64
       test-environment: bm.balena-dev.com
-      test-workers: qemu
+      test-workers: >
+        [
+          "qemu"
+        ]
       # Allow overriding these inputs for manual triggers
       environment: ${{ inputs.environment || 'balena-staging.com' }}
       sign-image: ${{ inputs.sign-image || false }}
