--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -1192,3 +1192,40 @@ jobs:
           # Two variables extra for this job
           QEMU_SECUREBOOT: 1
           FLASHER_SECUREBOOT: 1
+
+  # This job always runs and will fail if any of the builds or tests fail.
+  # This way we can mark this job as required for merging PRs.
+  # Otherwise we would need to mark each build and test matrix, suite, etc. as required.
+  all_jobs:
+    name: All jobs
+    needs:
+      - build
+      - test
+    runs-on: ubuntu-latest
+    # Do not skip this job if needed jobs are skipped, as we always
+    # want to capture pass/fail for the entire workflow and skipped
+    # jobs count as passing as far as required checks go.
+    if: |
+      always() && inputs.run-tests == true
+
+    defaults:
+      run:
+        working-directory: .
+        shell: bash --noprofile --norc -eo pipefail -x {0}
+
+    steps:
+      - name: Reject failed jobs
+        run: |
+          if [ "${{ contains(needs.*.result, 'failure') }}" = "true" ]
+          then
+            echo "One or more tests have failed"
+            exit 1
+          fi
+
+      - name: Reject cancelled jobs
+        run: |
+          if [ "${{ contains(needs.*.result, 'cancelled') }}" = "true" ]
+          then
+            echo "One or more tests were cancelled"
+            exit 1
+          fi
